三级联动第四次bug修改

--- a/threeDemo.html
+++ b/threeDemo.html
@@ -250,6 +250,7 @@
                 $('.shiUl').html()
                 $('.shiUl').hide()
             }
+            nowShengIndex = $(this).attr('num');
         })
         // 市 渲染// 点击省 // 点击第一级
         $('.shengUl li').click(function () {
